--- a/ASP.NET Developer Lynda Courses/ExploreCaliforniaMVCWithData/Views/Shared/_Layout.cshtml
+++ b/ASP.NET Developer Lynda Courses/ExploreCaliforniaMVCWithData/Views/Shared/_Layout.cshtml
@@ -1,18 +1,20 @@
 ﻿<!DOCTYPE HTML>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Welcome to Explore California</title>
-<meta name="description" content="A lynda.com example of HTML5 and CSS3">
-<meta name="keywords" content="html5, css3, lynda, local storage, canvas, forms, semantics, web apps">
-<!--make sure mobile devices display the page at the proper scale	-->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--[if lt IE 9]>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<link href="/css/main.css" rel="stylesheet" type="text/css" media="screen, projection">
+    <meta charset="utf-8">
+    <title>Welcome to Explore California</title>
+    <meta name="description" content="A lynda.com example of HTML5 and CSS3">
+    <meta name="keywords" content="html5, css3, lynda, local storage, canvas, forms, semantics, web apps">
+    <!--make sure mobile devices display the page at the proper scale	-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <link href="/css/main.css" rel="stylesheet" type="text/css" media="screen, projection">
+    <script src="~/scripts/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="~/scripts/site.js" type="text/javascript"></script>
 </head>
-<body id="home" class="no-js">
+<body id="home">
 <div id="wrapper">
   <header id="mainHeader"> <a href="/" title="home" class="logo">
    <!-- I need this div because IE is an affront to mankind-->
